2006-06-07  Adam Jocksch  <ajocksch@redhat.com>

	* DummySourceWindow.java (DummySourceWin): No longer calls set dummy
	paths method in SourceWindowFactory, this is expected to temporarily
	break the dummy source window.
	* Gui.java (gui): No longer calls setTestFilesPath.

2006-06-07  Sami Wagiaalla  <swagiaal@redhat.com>

	* Gui.java: Added a file check before frysk tries
	to open settings file.

2006-05-31  Sami Wagiaalla  <swagiaal@redhat.com>

	* druid/CreateFryskSessionDruid.java: added moving to
	child proc of node proc is null (fix for 2702).
	
2006-05-31  Sami Wagiaalla  <swagiaal@redhat.com>

	* druid/CreateFryskSessionDruid.java: removed
	creation of new session when cancel button is clicked
	and added currentSession.donotSave() (patch by 
	mcvet@redhat.com fix for 2688).

2006-05-31  Sami Wagiaalla  <swagiaal@redhat.com>

	* Gui.java: Added code for starting the refresh timer
	as an event that is handled /after/ Gtk.main() is 
	started (fix for 2702).

2006-05-30  Andrew Cagney  <cagney@redhat.com>

	* test/GuiTestLib.java: Use frysk.proc.TasksObserver.

2006-05-26  Sami Wagiaalla  <swagiaal@redhat.com>

	* sessions/DebugProcess.java: using getNiceExecutablePath
	instead of getFullExecutablePath.
	* glade/procpop.glade: Added a status bar.
	* druid/CreateFryskSessionDruid.java: using getNiceExecutablePath
	instead of getFullExecutablePath.

2006-05-19  Sami Wagiaalla  <swagiaal@redhat.com>

	* druid/CreateFryskSessionDruid.java: replace getCommand with
	getExecutableName wich "does the right thing".

2006-05-19  Phil Muldoon  <pmuldoon@redhat.com>

	* druid/CreateFryskSessionDruid.java (getDruidStructureControls):
	Add support for launching old sessions.
	
	* sessions/SessionManager.java (clear): Rewrite. Move new to
	class init.
	* druid/CreateFryskSessionDruid.java (copySession.buttonEven): 
	Added null selection test.
	(toggleWarning): New.
	(buttonEvent): 
	* druid/CreateFryskSessionDruid.java (editSession.buttonEven): 
	Ditto.