@@ -1,0 +1,10 @@
+<?xml version='1.0'?>
+<launchConfiguration type='org.eclipse.ui.externaltools.ProgramBuilderLaunchConfigurationType'>
+    <stringAttribute key='org.eclipse.ui.externaltools.ATTR_LOCATION' value='/bin/sh'/>
+    <booleanAttribute key='org.eclipse.ui.externaltools.ATTR_TRIGGERS_CONFIGURED' value='true'/>
+    <stringAttribute key='org.eclipse.ui.externaltools.ATTR_RUN_BUILD_KINDS' value='clean'/>
+    <stringAttribute key='org.eclipse.ui.externaltools.ATTR_WORKING_DIRECTORY' value='${build_project}/bin'/>
+    <booleanAttribute key='org.eclipse.debug.core.appendEnvironmentVariables' value='true'/>
+    <stringAttribute key='org.eclipse.ui.externaltools.ATTR_TOOL_ARGUMENTS' value='rm -rf *'/>
+    <booleanAttribute key='org.eclipse.debug.ui.ATTR_LAUNCH_IN_BACKGROUND' value='false'/>
+</launchConfiguration>
