@@ -1,0 +1,7 @@
+<?xml version='1.0'?>
+<launchConfiguration type='org.eclipse.ant.AntBuilderLaunchConfigurationType'>
+    <booleanAttribute key='org.eclipse.ui.externaltools.ATTR_TRIGGERS_CONFIGURED' value='true'/>
+    <booleanAttribute key='org.eclipse.ui.externaltools.ATTR_BUILDER_ENABLED' value='false'/>
+    <mapAttribute key='org.eclipse.ui.externaltools.ATTR_TOOL_ARGUMENTS'/>
+    <stringAttribute key='org.eclipse.ui.externaltools.ATTR_DISABLED_BUILDER' value='org.eclipse.jdt.core.javabuilder'/>
+</launchConfiguration>
