@@ -1,3 +1,8 @@
+2006-06-08  Nurdin Premji  <npremji@redhat.com>
+
+	* test/GuiTestLib.java: Changed references from "Tasks" to 
+	"Offspring" and "TasksObserver" to "OffspringObserver"
+
 2006-06-07  Adam Jocksch  <ajocksch@redhat.com>
 
 	* DummySourceWindow.java (DummySourceWin): No longer calls set dummy
